@@ -1,3 +1,8 @@
+2009-07-27  Kai Tietz  <kai.tietz@onevision.com>
+
+	* libsrc/wspiapi.c: Add function implementations of inline
+	version in wspiapi.h
+
 2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>
 
 	misc/
